@@ -1,3 +1,5 @@
+2005/10/16 -- released version 20051016_trunk
+
 2005/10/15 -- released version 20051015_trunk
 
 * include the smallest ping value in the graphs too
